Fixed issue with longer text Added box-shadow,fixed issue with longer text overlapping.

--- a/src/App.css
+++ b/src/App.css
@@ -1,90 +1,86 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap");
 :root {
-    --bg : #192a56;
-    --bg-accent : #f5f6fa;
-    --lines : #273c75;
-    --text : #fbc531;
+  --bg: #192a56;
+  --bg-accent: #f5f6fa;
+  --lines: #273c75;
+  --text: #fbc531;
 }
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Source Code Pro', monospace;
-
-}
-
-.main{
-    width: 100%;
-    height: 100vh;
-    background-color: var(--bg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Source Code Pro", monospace;
 }
 
-.content{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 40px;
-    border: 5px solid var(--lines);
-    width: 70%;
-    height: 60%;
-    background-color: var(--bg-accent);
-    border-radius: 20px;
-    color: var(--text);
+.main {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--bg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 2rem;
+  padding: 1rem;
+  width: 70%;
+  height: 60%;
+  background-color: var(--bg-accent);
+  border-radius: 20px;
+  color: var(--text);
+  box-shadow: 7px 7px 0px var(--lines);
 }
 .content .text {
-    text-align: center;
-    padding: 20px;
-    font-weight: 700;
+  text-align: center;
+  font-weight: 700;
+  padding: 10px;
 }
+
 .content button {
-    color: var(--lines);
-    font-size: 30px;
-    font-weight: 700;
-    border: 5px solid var(--lines);
-    width: 200px;
-    height: 70px;
-    margin-top: 100px;
-    border-radius: 15px;
-    background-color:var(--bg-accent);
-    cursor: pointer;
-    padding: 10px;
-    transition: 300ms;
+  color: var(--lines);
+  font-size: 2rem;
+  font-weight: 700;
+  border: 5px solid var(--lines);
+  margin-top: auto;
+  border-radius: 15px;
+  background-color: var(--bg-accent);
+  cursor: pointer;
+  padding: 10px;
+  transition: 300ms;
+  outline: 0;
 }
 .content button:hover {
-    background-color: var(--bg);
-    color: var(--text);
+  background-color: var(--bg);
+  color: var(--text);
 }
 .content .alert {
-    position: absolute;
-    color: var(--text);
-    font-size: 18px;
-    font-weight: 500;
-    opacity: 0.7;
+  position: absolute;
+  color: gray;
+  font-size: 0.5em;
+  font-weight: 500;
 }
-
 
 svg {
-    color: var(--bg);
+  color: var(--bg);
 }
 
+@media (max-width: 800px) {
+  .content .text {
+    font-size: 1.5rem;
+  }
 
-@media (max-width : 500px) {
-    .content .text{
-        font-size: 25px;
-    }
+  .content button {
+    /* width: 170px;
+        height: 70px; */
+    font-size: 1.5rem;
+  }
 
-    .content button{
-        width: 170px;
-        height: 70px;
-        font-size: 25px;
-    }
-
-    .content .alert{
-        font-size: 15px ;
-    }
+  .content .alert {
+    font-size: 15px;
+  }
 }
